--- a/DocumentManagerUI/Pages/Picture/EditPictureForm.razor
+++ b/DocumentManagerUI/Pages/Picture/EditPictureForm.razor
@@ -7,64 +7,59 @@
 @inject HttpClient Http
 @using System.Net.Http.Json
 @using Microsoft.JSInterop
+@using System.Drawing
+@using Color = Blazorise.Color
 @inject IJSRuntime jsRuntime
 
 
-<EditForm Model="@File" OnValidSubmit="@PutFileObject">
+<EditForm Model="@Picture" OnValidSubmit="@PutPictureObject">
     <DataAnnotationsValidator />
     <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
     <div class="col-12 Foorm">
         <label class="form-label">Title</label>
-        <input @bind="File.Title" type="text" class="form-control" id="inputAddress" placeholder="Title" />
+        <input @bind="Picture.Title" type="text" class="form-control" id="inputAddress" placeholder="Title" />
     </div>
 
     <div class="col-12 py-2 Foorm">
         <label class="form-label">Format</label>
-        <input @bind="File.Format" type="text" class="form-control" id="inputAddress2" placeholder="Format" />
+        <input @bind="Picture.Format" type="text" class="form-control" id="inputAddress2" placeholder="Format" />
     </div>
     
     <div class="col-12 py-2 px-0 py-0 Foorm">
-        <label class="form-label col-12">KeyWords</label>
-        <div class="col-12 input-group">
-            <input @bind="File.KeyWords" type="text" class="form-control" aria-label="KeyWords" placeholder="KeyWords"></input>
-        </div>
-    </div>
-
-    <div class="col-12 py-2 px-0 py-0 Foorm">
         <label class="form-label col-12">Description</label>
         <div class="col-12 input-group">
-            <textarea @bind="File.Description" type="text" class="form-control" aria-label="Description" placeholder="Description"></textarea>
+            <textarea @bind="Picture.Description" type="text" class="form-control" aria-label="Description" placeholder="Description"></textarea>
         </div>
     </div>
      
     <div class="col-12 py-2 px-0 py-0 Foorm">
         <label class="form-label col-12">ContentType</label>
         <div class="col-12 input-group">
-            <input @bind="File.ContentType" type="text" class="form-control" aria-label="ContentType" placeholder="ContentType"></input>
+            <input @bind="Picture.ResolutionX" type="text" class="form-control" aria-label="ContentType" placeholder="ContentType"></input>
         </div>
     </div>
     
     <div class="col-12 py-2 px-0 py-0 Foorm">
         <label class="form-label col-12">Content</label>
         <div class="col-12 input-group">
-            <input @bind="File.Content" type="text" class="form-control" aria-label="Content" placeholder="Content"></input>
+            <input @bind="Picture.ResolutionY" type="text" class="form-control" aria-label="Content" placeholder="Content"></input>
         </div>
     </div>
     
     <div class="col-md-6 py-2 Foorm">
         <label class="form-label">CreationTime</label>
-        <input @bind="File.CreationTime" type="datetime" disabled="disabled" class="form-control" id="inputCity" />
+        <input @bind="Picture.CreationTime" type="datetime" disabled="disabled" class="form-control" id="inputCity" />
     </div>
     
     <div class="col-md-6 py-2 Foorm1">
         <label class="form-label">LastUpdate</label>
-        <input @bind="File.LastUpDate" type="datetime" disabled="disabled" class="form-control" id="inputZip" />
+        <input @bind="Picture.LastUpDate" type="datetime" disabled="disabled" class="form-control" id="inputZip" />
     </div>
     
     <div class="col-12 py-2 px-0 py-0 Foorm">
         <label class="form-label col-12">Size</label>
         <div class="col-12 input-group">
-            <input @bind="File.Size" disabled="disabled" type="text" class="form-control" aria-label="Size" placeholder="Size"></input>
+            <input @bind="Picture.Size" disabled="disabled" type="text" class="form-control" aria-label="Size" placeholder="Size"></input>
         </div>
     </div>
     
@@ -121,9 +116,9 @@
 @code {
 
     [Parameter]
-    public FileResponse File { get; set; }
+    public PictureResponse Picture { get; set; }
 
-    public FileObjectResponse fileTmp = new FileObjectResponse();
+    public PictureObjectResponse fileTmp = new PictureObjectResponse();
     string size;
     public Modal modalRef { get; set; }
 
@@ -154,7 +149,7 @@
     {
         try
         {
-            if (File.FileObject == null)
+            if (Picture.PictureObject == null)
             {
                 //GetFileObject();
                 Console.WriteLine(this);
@@ -162,11 +157,11 @@
             }
             else if(s == "h")
             {
-                return $"data:{File.FileObject.FileTypeMime};base64,{Convert.ToBase64String(File.FileObject.File)}";
+                return $"data:{Picture.PictureObject.FileTypeMime};base64,{Convert.ToBase64String(Picture.PictureObject.Picture)}";
             }
             else
             {
-                return File.FileObject.Name;
+                return Picture.PictureObject.Name;
             }
         }
         catch (Exception e)
@@ -190,10 +185,11 @@
                     var content = file.OpenReadStream(10240000);
                     await content.CopyToAsync(stream);
                     stream.Seek(0, SeekOrigin.Begin);
-                    File.Size = ConvertingValueFromBytes(file.Size, 0);
-                    File.FileObject = new FileObjectResponse(file.Name, stream.ToArray(), file.ContentType);
+                    Picture.Size = ConvertingValueFromBytes(file.Size, 0);
 
-                    if (File.FileObject == null)
+                    Picture.PictureObject = new PictureObjectResponse(file.Name, stream.ToArray(), file.ContentType);
+
+                    if (Picture.PictureObject == null)
                     {
                         throw new Exception("Mutable object not found");
                     }
@@ -219,34 +215,34 @@
         }
     }
 
-    private async Task PutFileObject()
+    private async Task PutPictureObject()
     {
         try
         {
             isLoading = true;
-            File.LastUpDate = DateTime.Now;
+            Picture.LastUpDate = DateTime.Now;
 
-            if (fileTmp.File == null)
+            if (fileTmp.Picture == null)
             {
-                fileTmp = File.FileObject;
+                fileTmp = Picture.PictureObject;
             }
 
-            var statusInfo2 = await Http.PutAsJsonAsync($"https://localhost:44339/api/FilePayload/file/{File.Id}", fileTmp);
+            var statusInfo2 = await Http.PutAsJsonAsync($"https://localhost:44318/api/PicturePayload/picture/{Picture.Id}", fileTmp);
             if (!statusInfo2.IsSuccessStatusCode)
             {
-                await Http.DeleteAsync($"https://localhost:44339/api/FileDescription/{File.Id}");
+                await Http.DeleteAsync($"https://localhost:44318/api/PictureDescription/{Picture.Id}");
                 throw new Exception("Error - 500. Internal Server Error - Put");
             }
             param = 1;
-            File.Size = size;
-            var statusInfo1 = await Http.PutAsJsonAsync($"https://localhost:44339/api/FileDescription/{File.Id}", File);
+            Picture.Size = size;
+            var statusInfo1 = await Http.PutAsJsonAsync($"https://localhost:44318/api/PictureDescription/{Picture.Id}", Picture);
             if (!statusInfo1.IsSuccessStatusCode)
             {
                 throw new Exception("Error - 500. Internal Server Error - Put");
             }
 
             
-            File.FileObject = fileTmp;
+            Picture.PictureObject = fileTmp;
             await Task.Delay(1000);
             isLoading = false;
         }
@@ -259,12 +255,12 @@
 
     private async Task GetFileObject()
     {
-        FileObjectResponse fileObject = new FileObjectResponse();
-        if (File.Id != Guid.Empty)
+        PictureObjectResponse fileObject = new PictureObjectResponse();
+        if (Picture.Id != Guid.Empty)
         {
-            fileObject = await Http.GetFromJsonAsync<FileObjectResponse>($"https://localhost:44339/api/FilePayload/file/{File.Id}");
+            fileObject = await Http.GetFromJsonAsync<PictureObjectResponse>($"https://localhost:44318/api/FilePayload/file/{Picture.Id}");
         }
-        File.FileObject = fileObject;
+        Picture.PictureObject = fileObject;
         StateHasChanged();
     }
 
