--- a/DocumentManagerUI/_Imports.razor
+++ b/DocumentManagerUI/_Imports.razor
@@ -12,3 +12,4 @@
 @using Blazorise
 @using DocumentManagerUI.Pages.Document
 @using DocumentManagerUI.Pages.File
+@using DocumentManagerUI.Pages.Picture
