--- a/DocumentManagerUI/Pages/Document/Documents.razor
+++ b/DocumentManagerUI/Pages/Document/Documents.razor
@@ -20,7 +20,6 @@
         <label class="form-label">Content</label>
         <RichTextEdit @ref="richTextEditRef"
                       Theme="RichTextEditTheme.Snow"
-                      ContentChanged="@OnContentChanged"
                       PlaceHolder="Type your post here..."
                       ReadOnly="@readOnly"
                       SubmitOnEnter="false"
@@ -64,7 +63,7 @@
     </div>
 
     <div class="col-3 subButtom Foorm">
-        <button type="submit" class="btn btn-primary">Сохранить</button>
+        <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Сохранить</button>
     </div>
 </EditForm>
 
@@ -90,7 +89,7 @@
     [Parameter]
     public string BaseURI { get; set; }
 
-
+    public string tmp ="";
     public string ErrorMessage { get; set; }
     public Modal modalRef { get; set; }
     private Document document = new();
@@ -98,8 +97,6 @@
     protected override async Task OnInitializedAsync()
     {
         await GetDocumentAsync();
-
-
     }
 
     private async Task GetDocumentAsync()
@@ -140,7 +137,7 @@
 
     private async Task HandleValidSubmit()
     {
-        document.Content = await richTextEditRef.GetHtmlAsync();
+        document.Content = await richTextEditRef.GetTextAsync();
         string uri = string.Concat(BaseURI, IdDocument);
         try
         {
@@ -163,23 +160,10 @@
 
 
     protected RichTextEdit richTextEditRef;
-    protected bool readOnly;
+    protected bool readOnly = false;
     protected string contentAsHtml;
     protected string contentAsDeltaJson;
     protected string contentAsText;
     protected string savedContent;
 
-    public async Task OnContentChanged()
-    {
-        contentAsHtml = await richTextEditRef.GetHtmlAsync();
-        contentAsDeltaJson = await richTextEditRef.GetDeltaAsync();
-        contentAsText = await richTextEditRef.GetTextAsync();
-
-    }
-
-    public async Task OnSave()
-    {
-        document.Content = await richTextEditRef.GetHtmlAsync();
-        await richTextEditRef.ClearAsync();
-    }
 }
