--- a/DocumentManagerUI/Shared/TabControl.razor.css
+++ b/DocumentManagerUI/Shared/TabControl.razor.css
@@ -31,7 +31,7 @@
 
 .conteinerMenu {
     display: inline-block;
-    */ flex-direction: column;
+    flex-direction: column;
     min-width: 230px;
     width: var(--b-vertical-bar-width, 230px);
     box-shadow: 2px 0 6px rgb(0 21 41 / 15%);
@@ -45,8 +45,8 @@
     display: inline-block;
     width: 100%;
     overflow-y: auto;
-    /*height: 100%;*/
-    max-height: 500px;
+    max-height: 440px;
+    max-width: 770px;
     padding-top: 5px;
 }
 
